add initial html and css skeleton to component files

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div class="ui raised very padded text container segment">
+<div class="app ui raised very padded text container segment">
   <app-navigation></app-navigation>
   <app-todo-add></app-todo-add>
   <app-todo-list></app-todo-list>
-  <button class="fluid ui button">Clear All</button>
+  <button class="fluid ui button clearBtn">Clear All</button>
 </div>
