--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,1 +1,7 @@
-<p>navigation works!</p>
+<h1 class="ui header center aligned">React ToDo App</h1>
+<nav class="ui secondary pointing menu">
+  <button class="item active">All</button>
+  <button class="item">Important</button>
+  <button class="item">Pending</button>
+  <button class="item">Complete</button>
+</nav>
