--- a/src/app/components/todo-add/todo-add.component.html
+++ b/src/app/components/todo-add/todo-add.component.html
@@ -1,1 +1,4 @@
-<p>todo-add works!</p>
+<div class="addTodo ui fluid action input">
+  <input type="text" placeholder="Add ToDo..." ref="{inputRef}" />
+  <button class="ui button">Add</button>
+</div>
