--- a/src/app/components/todo-list/todo-list.component.html
+++ b/src/app/components/todo-list/todo-list.component.html
@@ -1,5 +1,4 @@
-<p>todo-list works!</p>
-<div>
+<div class="ui segments">
   <app-todo-item></app-todo-item>
   <app-todo-item></app-todo-item>
   <app-todo-item></app-todo-item>
