--- a/src/app/components/todo-list/todo-item/todo-item.component.html
+++ b/src/app/components/todo-list/todo-item/todo-item.component.html
@@ -1,1 +1,26 @@
-<p>todo-item works!</p>
+<div class="ui segment teal tertiary">
+  <!-- EDIT SECTION -->
+  <div class="editTodo ui action input fluid">
+    <input type="text" placeholder="Enter edited todo..." />
+    <button class="ui button">Save</button>
+  </div>
+
+  <!-- TITLE AND TOGGLE BUTTONS -->
+  <div class="todoItem">
+    <h3 class="ui header">title</h3>
+    <div class="ui small basic icon buttons">
+      <button class="ui button">
+        <i class="exclamation icon"></i>
+      </button>
+      <button class="ui button">
+        <i class="edit icon"></i>
+      </button>
+      <button class="ui button">
+        <i class="check icon"></i>
+      </button>
+      <button class="ui button">
+        <i class="delete icon"></i>
+      </button>
+    </div>
+  </div>
+</div>
