changed title to reflect angular todo app project (previously was react)

--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,4 +1,4 @@
-<h1 class="ui header center aligned">React ToDo App</h1>
+<h1 class="ui header center aligned">Angular ToDo App</h1>
 <nav class="ui secondary pointing menu">
   <button class="item active">All</button>
   <button class="item">Important</button>
