imported initial dummy data from todos service to todo-list component and passed into each todo-item

--- a/src/app/components/todo-list/todo-item/todo-item.component.html
+++ b/src/app/components/todo-list/todo-item/todo-item.component.html
@@ -7,7 +7,7 @@
 
   <!-- TITLE AND TOGGLE BUTTONS -->
   <div class="todoItem">
-    <h3 class="ui header">title</h3>
+    <h3 class="ui header">{{ todo.description }}</h3>
     <div class="ui small basic icon buttons">
       <button class="ui button">
         <i class="exclamation icon"></i>
