--- a/src/app/components/todo-list/todo-item/todo-item.component.html
+++ b/src/app/components/todo-list/todo-item/todo-item.component.html
@@ -1,4 +1,10 @@
-<div class="ui segment teal tertiary">
+<div
+  class="ui segment"
+  [ngClass]="{
+    teal: todo.important,
+    tertiary: todo.complete
+  }"
+>
   <!-- EDIT SECTION -->
   <div class="editTodo ui action input fluid">
     <input type="text" placeholder="Enter edited todo..." />
