--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -1,21 +1,23 @@
 <h1 class="ui header center aligned">Angular ToDo App</h1>
 <nav class="ui secondary pointing menu">
-  <app-filter-button (click)="filter = 'all'" [toggleActive]="filter === 'all'"
+  <app-filter-button
+    (click)="filter.category = 'all'"
+    [toggleActive]="filter.category === 'all'"
     >All</app-filter-button
   >
   <app-filter-button
-    (click)="filter = 'important'"
-    [toggleActive]="filter === 'important'"
+    (click)="filter.category = 'important'"
+    [toggleActive]="filter.category === 'important'"
     >Important</app-filter-button
   >
   <app-filter-button
-    (click)="filter = 'pending'"
-    [toggleActive]="filter === 'pending'"
+    (click)="filter.category = 'pending'"
+    [toggleActive]="filter.category === 'pending'"
     >Pending</app-filter-button
   >
   <app-filter-button
-    (click)="filter = 'complete'"
-    [toggleActive]="filter === 'complete'"
+    (click)="filter.category = 'complete'"
+    [toggleActive]="filter.category === 'complete'"
     >Complete</app-filter-button
   >
 </nav>
