--- a/src/app/components/todo-list/todo-list.component.html
+++ b/src/app/components/todo-list/todo-list.component.html
@@ -1,3 +1,10 @@
 <div class="ui segments">
-  <app-todo-item *ngFor="let todo of todos" [todo]="todo"></app-todo-item>
+  <!-- <div *ngFor="let todo of todos">
+    <app-todo-item [todo]="todo"></app-todo-item>
+  </div> -->
+  <!-- <app-todo-item *ngFor="let todo of todos" [todo]="todo"></app-todo-item> -->
+  <app-todo-item
+    *ngFor="let todo of filterTodos(filter.category)"
+    [todo]="todo"
+  ></app-todo-item>
 </div>
