complete add functionality in the todo-add component

--- a/src/app/components/todo-add/todo-add.component.html
+++ b/src/app/components/todo-add/todo-add.component.html
@@ -1,4 +1,9 @@
 <div class="addTodo ui fluid action input">
-  <input type="text" placeholder="Add ToDo..." ref="{inputRef}" />
-  <button class="ui button">Add</button>
+  <input type="text" placeholder="Add ToDo..." #newTodo />
+  <button
+    class="ui button"
+    (click)="addTodo(newTodo.value); newTodo.value = ''"
+  >
+    Add
+  </button>
 </div>
