add event handler in todo-list to toggle important and complete status of each todo

--- a/src/app/components/todo-list/todo-list.component.html
+++ b/src/app/components/todo-list/todo-list.component.html
@@ -2,5 +2,6 @@
   <app-todo-item
     *ngFor="let todo of filterTodos(filter.category)"
     [todo]="todo"
+    (actionClicked)="handleActionClicked($event)"
   ></app-todo-item>
 </div>
