update addTodo method in todos.service and update functionaility in todo-add component

--- a/src/app/components/todo-add/todo-add.component.html
+++ b/src/app/components/todo-add/todo-add.component.html
@@ -2,7 +2,7 @@
   <input type="text" placeholder="Add ToDo..." #newTodo />
   <button
     class="ui button"
-    (click)="addTodo(newTodo.value); newTodo.value = ''"
+    (click)="onAddTodo(newTodo.value); newTodo.value = ''"
   >
     Add
   </button>
